# hls-vi-historical

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  generate-vi-files.sh  lambda_function.py  pyproject.toml
.github/workflows/: ecr.yml
hls_vi_historical/: __init__.py  main.py
hls_vi_historical/resources/: strip-urls.xslt
scripts/: bootstrap-minio.py
